--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,9 +23,8 @@
 
 body {
   background-color: var(--background-color);
-  color: var(--foreground);
+  color: var(--font-color);
   font-family: Arial, Helvetica, sans-serif;
-
 
   --font-h1: var(--regular) var(--text-h1-r) / normal var(--font-family);
   --font-h2: var(--regular) var(--text-h2-r) / normal var(--font-family);
@@ -75,4 +74,3 @@ p,
 .s {
   font: var(--font-s);
 }
-
