--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,10 +21,15 @@
   }
 }
 
+*::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
 body {
-  background-color: var(--background-color);
-  color: var(--font-color);
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: var(--color-background);
+  color: var(--color-foreground);
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
   --font-h1: var(--regular) var(--text-h1-r) / normal var(--font-family);
   --font-h2: var(--regular) var(--text-h2-r) / normal var(--font-family);
@@ -73,4 +78,20 @@ p,
 
 .s {
   font: var(--font-s);
+}
+
+@layer utilities {
+  .bg-sharp-gradient {
+    background-image:
+  linear-gradient(
+    to bottom,
+    var(--colors-neutrals-n0) 0%,
+    var(--colors-neutrals-n0) 29%,
+    var(--colors-palette-p1) 100%
+  ),
+  url('/textures/noise.svg');
+background-blend-mode: overlay;
+background-repeat: repeat;
+background-size: cover;
+  }
 }
