--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,3 @@
-/* Variables */
 :root {
   /* Mode 1 */
   /* color */
@@ -10,22 +9,29 @@
   --colors-feedback-fs2: #ccfbf1;
   --colors-feedback-fw1: #854d0e;
   --colors-feedback-fw2: #fef9c3;
+
   --colors-neutrals-n0: #ffffff;
   --colors-neutrals-n1: #eaebec;
   --colors-neutrals-n1-2-bamba: #f5f5f5;
-  --colors-neutrals-n10: #141219;
   --colors-neutrals-n2: #bfbfbf;
   --colors-neutrals-n3: #808080;
   --colors-neutrals-n4: #595959;
-  --colors-palette-p1: #124e30;
-  --colors-palette-p1-25: #039e8240;
-  --colors-palette-p1-50: #c082ff;
+  --colors-neutrals-n10: #141219;
+
+  --colors-palette-p1: #FFA500;
+ --colors-palette-p1-25: #FFA50088; 
+  --colors-palette-p1-50: #FFA500CC;
   --colors-palette-p2: #ffff1e;
   --colors-palette-p3: #ff8400;
+
+  --colors-palette-p1-soft: #FFD699;         
+  --colors-palette-complement: #0055A5;  
+
   /* number */
   --radius-sm: 0.625rem;
   --radius-md: 0.9375rem;
   --radius-lg: 1.25rem;
+
   --spacing-xs: 0.3125rem;
   --spacing-sm: 0.625rem;
   --spacing-md: 0.9375rem;
@@ -62,3 +68,4 @@
   --elevation-colored: 0px 0px 0px 4px rgba(132, 10, 255, 0.25);
   --elavation-inset: '0px 2px 2px 0px rgba(0, 0, 0, 0.25), 0px 7px 20px 0px rgba(0, 0, 0, 0.25) inset';
 }
+
